--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .timerView {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
